[tool.poetry]
name = "ahnextractor"
version = "0.1.0"
description = ""
authors = ["Rob van Putten <breinbaasnl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pydantic = "^1.9.0"
aiohttp = "^3.8.1"
rdp = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
